Compatibility with JDK 18